# BlinkLinMulT

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
blinklinmult/: __init__.py
blinklinmult/demo/: talkingface_feature_extraction.py  talkingface_inference.py  webcam_densenet121.py
blinklinmult/models/: BlinkLinMulT.py  __init__.py  backbone.py  clip_wrapper.py  efficientnetv2.py  gru.py
blinklinmult/preprocess/: cew.py  eyeblink8.py  mrl.py  reader.py  rn.py  rtgene.py  talkingface.py  zju.py
data/db/talkingface/: talkingface.json
test/: test_backbone_models.py  test_sequence_models.py
