[build-system]
requires = ["hatchling", "hatch-requirements-txt"]
build-backend = "hatchling.build"

[project]
name = "blinklinmult"
version = "1.0.4"
description = "BlinkLinMulT: Transformer-based Eye Blink Detection."
keywords = ["blink", "eye state recognition", "blink presence detection", "multimodal", "transformer", "linear-complexity attention"]
authors = [
  { name = "fodorad", email = "foauaai@inf.elte.hu" },
]
readme = {"file" = "README.md", "content-type" = "text/markdown"}
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "torch",
  "torchvision",
  "linmult==1.1.0",
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[project.urls]
Documentation = "https://github.com/fodorad/blinklinmult#readme"
Issues = "https://github.com/fodorad/blinklinmult/issues"
Source = "https://github.com/fodorad/blinklinmult"

[tool.hatch.build.targets.wheel]
packages = ["blinklinmult"]
exclude = ["blinklinmult/test", "blinklinmult/train", "data/"]

[tool.hatch.build.targets.sdist]
packages = ["blinklinmult"]
exclude = ["blinklinmult/test", "blinklinmult/train", "data/"]

[project.optional-dependencies]
dev = [
  "matplotlib",
  "opencv-python",
  "scipy",
  "tqdm",
  "pytorch_lightning==1.8.4",
  "torchsampler",
  "moviepy",
  "clip",
  "exordium[tddfa]",
  "bbox_visualizer"
]